= 2.2.7 =
* SEO title conflicts with SEOPress - FIXED
* GD > Loop option added to choose Elementor skin - ADDED
* Category field shows legacy radio input to set default category - FIXED

= 2.2.6 =
* Float value parsing shows comma with pl_PL locale - FIXED
* Elementor custom tag shows country name untranslated - FIXED
* GD events widgets not showing in elementor - FIXED
* Option added to hide search & near inputs in search form - ADDED
* AJAX search compatibility changes - ADDED

= 2.2.4 =
* Neighbourhood SEO variable not working on single page - FIXED
* GD Categories widget option include categories is not working for child categories - FIXED
* Prevent add/delete column for reserved fields like city, region etc - CHANGED
* Unable to disable mouse scroll zoom on map - FIXED
* Default empty badge attribute shows nothing for default category badge - FIXED
* Set address on map makes Address Line 2 blank - FIXED
* GeoDirectory Elementor widgets not showing in searches - FIXED
* Backend settings textarea options strips HTML tags - FIXED
* Imported external linked image not working for og:image - FIXED
* Missing no rating class on listing grid - FIXED
* Option added in tags field to enable spell check - CHANGED
* Prevent activation redirect on plugin install during setup wizard - FIXED
* Tags & file required validation not working - FIXED
* Block Theme compatibility - ADDED
* Sort field cache not updated on field update - FIXED
* Street address not set properly for address within Japan - FIXED
* Email tags missing from below textarea - FIXED
* Price validation pattern looses slashes on save field - FIXED
* Comment notification rating allow variables - ADDED

= 2.2.3 =
* CPT sorting unable to save descending order - FIXED
* Custom fields setting Price Options should not visible on all field types - CHANGED

= 2.2.2 =
* CPT pages options show default option as a placeholder - CHANGED
* Select field required error option not working - FIXED