@@ -2,6 +2,7 @@
 * SEO title conflicts with SEOPress - FIXED
 * GD > Loop option added to choose Elementor skin - ADDED
 * Category field shows legacy radio input to set default category - FIXED
+* Non GD pages shows blank meta description tag - FIXED
 
 = 2.2.6 =
 * Float value parsing shows comma with pl_PL locale - FIXED
